Replace .env with .env.template
It's better practice to have .env commited to .gitignore and provide a template file.
This changes the default behavior to having secrets in an ignored file versus having to be conscious to not commit/push secrets.

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-# SAMPLE .env, replace with your actual data
+# SAMPLE .env, copy .env.template to .env and then edit .env with your data to avoid committing secrets
 ANSIBLE_USER=your_initial_ssh_user
 ANSIBLE_PASSWORD=your_initial_password
 SSH_KEY_PATH=/path/to/your/id_rsa.pub
